--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -5,7 +5,9 @@
                [mode]="(isHandset$ | async) ? 'over' : 'side'"
                [opened]="(isHandset$ | async) === false">
     <div style="padding: 20px"><img src="assets/clematis.png" alt=""></div>
-    <mat-toolbar>{{title}}</mat-toolbar>
+    <mat-toolbar>
+      {{title}}
+    </mat-toolbar>
     <mat-nav-list>
       <div *ngIf="isLoggedIn">
         <a mat-list-item
@@ -41,17 +43,22 @@
   <mat-sidenav-content>
     <mat-toolbar color="primary" class="mat-elevation-z6">
       <button
-      type="button"
-      aria-label="Toggle sidenav"
-      mat-icon-button
-      (click)="drawer.toggle()"
-      *ngIf="isHandset$ | async">
-      <mat-icon fontIcon="menu"></mat-icon>
-    </button>
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+        <mat-icon fontIcon="menu"></mat-icon>
+      </button>
       <span *ngIf="isHandset$ | async">{{title}}</span>
       <span class="header-spacer"></span>
-      <span class="navbar-brand" style="font-size: 20px; padding-right: 15px"
-            *ngIf="isLoggedIn">{{getUserInfo()}}</span>
+      <mat-form-field appearance="outline">
+        <mat-icon matPrefix>search</mat-icon>
+        <input type="search" matInput placeholder="Search" />
+      </mat-form-field>
+      <span class="navbar-username" *ngIf="isLoggedIn && !(isHandset$ | async)">
+        {{getUserInfo()}}
+      </span>
       <span class="navbar-brand" style="border-left: 2px solid white; font-size: 20px;">
         <button mat-icon-button *ngIf="isLoggedIn" type="button" (click)="logout()">
           <mat-icon fontIcon="logout"></mat-icon>
