[+] Added currency exchange table

--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -17,6 +17,9 @@
            routerLinkActive="/accounts"
            routerLink="/accounts">Accounts</a>
         <a mat-list-item
+           routerLinkActive="/exchange"
+           routerLink="/exchange">Money Exchange</a>
+        <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/commodities">Commodities</a>
         <a mat-list-item
