--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
@@ -2,22 +2,33 @@
 
   <mat-form-field appearance="fill">
     <mat-label>Available source currencies</mat-label>
-    <mat-select [disabled]="this.loading" [value]="sourceCurrency" (valueChange)="updatesSourceCurrency($event)">
+    <mat-select [disabled]="this.loading || this.pageLoading" [value]="sourceCurrency" (valueChange)="updatesSourceCurrency($event)">
       <mat-option *ngFor="let currency of getSourceCurrencies() | keyvalue" [value]="currency.value">
         {{currency.value}}
       </mat-option>
     </mat-select>
   </mat-form-field>
 
+  <mat-button-toggle (change)="swapCurrencies()">
+    <mat-icon>swap_horiz</mat-icon>
+  </mat-button-toggle>
 
   <mat-form-field appearance="fill">
     <mat-label>Available destination currencies</mat-label>
-    <mat-select [disabled]="this.loading" [value]="destCurrency" (valueChange)="updatesDestCurrency($event)">
+    <mat-select [disabled]="this.loading || this.pageLoading" [value]="destCurrency" (valueChange)="updatesDestCurrency($event)">
       <mat-option *ngFor="let currency of getDestCurrencies() | keyvalue" [value]="currency.value">
         {{currency.value}}
       </mat-option>
     </mat-select>
   </mat-form-field>
+
+  <h1 class="timeHeader" [hidden]="this.loading || this.pageLoading">
+    {{this.average | currency: this.sourceCurrency}}
+  </h1>
+
+  <h1 class="timeHeader" [hidden]="!(this.loading || this.pageLoading)">
+    Loading...
+  </h1>
 
   <div *ngIf="!error">
 
@@ -50,14 +61,19 @@
             <td mat-cell *matCellDef="let element"></td>
           </ng-container>
 
-          <ng-container matColumnDef="amount">
-            <th mat-header-cell *matHeaderCellDef> Amount </th>
-            <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+          <ng-container matColumnDef="sourceamount">
+            <th mat-header-cell *matHeaderCellDef> Source Amount </th>
+            <td mat-cell *matCellDef="let element"> {{element.sourceamount | currency: sourceCurrency}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="destamount">
+            <th mat-header-cell *matHeaderCellDef> Dest Amount </th>
+            <td mat-cell *matCellDef="let element"> {{element.destamount | currency: destCurrency}} </td>
           </ng-container>
 
           <ng-container matColumnDef="rate">
             <th mat-header-cell *matHeaderCellDef> Rate </th>
-            <td mat-cell *matCellDef="let element"> {{element.rate}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.rate | number: '1.6-8'}} </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
