--- a/apps/money-tracker-ui/src/app/commodities/last-commodities-list/last-commodities-list.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/last-commodities-list/last-commodities-list.component.html
@@ -39,6 +39,7 @@
                    [pageSizeOptions]="[5, 10, 25, 100]"
                    [pageIndex]="n"
                    (page)="setCurrentPage($event)"
+                   [showFirstLastButtons]="true"
                    aria-label="Select page">
     </mat-paginator>
 
@@ -94,6 +95,7 @@
                    [pageSizeOptions]="[5, 10, 25, 100]"
                    [pageIndex]="n"
                    (page)="setCurrentPage($event)"
+                   [showFirstLastButtons]="true"
                    aria-label="Select page">
     </mat-paginator>
 
