--- a/apps/money-tracker-ui/src/app/organizations/organizations-list/organizations-list.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organizations-list/organizations-list.component.html
@@ -14,6 +14,7 @@
                      [pageSizeOptions]="[5, 10, 25, 100]"
                      [pageIndex]="n"
                      (page)="setCurrentPage($event)"
+                     [showFirstLastButtons]="true"
                      aria-label="Select page">
       </mat-paginator>
 
@@ -26,6 +27,7 @@
                      [pageSizeOptions]="[5, 10, 25, 100]"
                      [pageIndex]="n"
                      (page)="setCurrentPage($event)"
+                     [showFirstLastButtons]="true"
                      aria-label="Select page">
       </mat-paginator>
 
