--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
@@ -44,7 +44,7 @@
                        aria-label="Select page">
         </mat-paginator>
 
-        <table mat-table [dataSource]="entities" class="mat-elevation-z8">
+        <table mat-table [dataSource]="entities">
 
           <ng-container matColumnDef="exchangedate">
             <th mat-header-cell *matHeaderCellDef> Exchange Date </th>
