--- a/apps/money-tracker-ui/src/app/commodities/last-commodities-list/last-commodities-list.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/last-commodities-list/last-commodities-list.component.html
@@ -43,7 +43,7 @@
                    aria-label="Select page">
     </mat-paginator>
 
-    <table mat-table [dataSource]="entities" class="mat-elevation-z8">
+    <table mat-table [dataSource]="entities">
 
 
       <ng-container matColumnDef="daysAgo">
