--- a/apps/money-tracker-ui/src/app/pages/expences-list/expenses-list.component.html
+++ b/apps/money-tracker-ui/src/app/pages/expences-list/expenses-list.component.html
@@ -42,7 +42,7 @@
                      aria-label="Select page">
       </mat-paginator>
 
-      <table mat-table [dataSource]="entities" class="mat-elevation-z8">
+      <table mat-table [dataSource]="entities">
 
         <ng-container matColumnDef="transferdate">
           <th mat-header-cell *matHeaderCellDef> Transfer Date </th>
