--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -11,13 +11,13 @@
     <mat-nav-list>
       <div *ngIf="isLoggedIn">
         <a mat-list-item
-           routerLinkActive="/main"
+           routerLinkActive="active-link"
            routerLink="/main">Home</a>
         <a mat-list-item
-           routerLinkActive="/accounts"
+           routerLinkActive="active-link"
            routerLink="/accounts">Accounts</a>
         <a mat-list-item
-           routerLinkActive="/exchange"
+           routerLinkActive="active-link"
            routerLink="/exchange">Money Exchange</a>
         <a mat-list-item
            routerLinkActive="active-link"
