--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.sass
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.sass
@@ -1,3 +1,11 @@
 .timeHeader
   float: right
   padding-top: 20px
+
+.header
+  width: 100%
+  background: blueviolet
+  color: white
+  text-align: center
+  #span
+    width: 25%
