--- a/apps/money-tracker-ui/src/app/header/header.component.sass
+++ b/apps/money-tracker-ui/src/app/header/header.component.sass
@@ -74,7 +74,7 @@
   height: 100%
 
 .sidenav
-  width: 200px
+  width: 230px
 
 .sidenav .mat-toolbar
   background: inherit
@@ -105,6 +105,7 @@ mat-sidenav-content
       mat-form-field-infix
         width: 100px !important
 
-
+mat-icon
+  vertical-align: text-bottom
 
 
