--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -67,7 +67,7 @@
       <span *ngIf="isHandset$ | async">{{title}}</span>
       <span class="header-spacer"></span>
       <mat-form-field appearance="outline">
-        <mat-icon matPrefix>search</mat-icon>
+        <mat-icon class="mat-icon-dash" matPrefix>search</mat-icon>
         <input type="search" matInput placeholder="Search" />
       </mat-form-field>
       <span class="navbar-username" *ngIf="isLoggedIn && !(isHandset$ | async)">
