--- a/apps/money-tracker-ui/src/app/header/header.component.sass
+++ b/apps/money-tracker-ui/src/app/header/header.component.sass
@@ -100,12 +100,12 @@ mat-sidenav-content
       padding-left: 15px
       padding-right: 15px
       width: 100%
-      input
-        color: white
+      font-size: larger
       mat-form-field-infix
         width: 100px !important
 
-mat-icon
-  vertical-align: text-bottom
+mat-sidenav
+  mat-icon
+    vertical-align: text-bottom
 
 
