--- a/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
@@ -33,10 +33,9 @@
   </div>
 </div>
 
-<div class='row' *ngIf="graphQty.data[0].x.length > 1">
+<div class='row'>
   <div class='col-12'>
-    <plotly-plot [data]="graphQty.data" [layout]="graphQty.layout"
-                 [style]="{minWidth: '800px', width: '100%', height: '500px'}">
-    </plotly-plot>
   </div>
 </div>
+
+
