--- a/apps/money-tracker-ui/src/app/expenses/last-commodities-list/last-commodities-list.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/last-commodities-list/last-commodities-list.component.html
@@ -1,50 +1,5 @@
-<div class="row" *ngIf="error">
-  <div class="col-sm-12 alert alert-danger">
-    {{error}}
-  </div>
-</div>
-
-<content-loader class="ph-item" *ngIf="loading">
-  <svg:rect x="0" y="0" rx="3" ry="3" width="450" height="10" />
-  <svg:rect x="20" y="20" rx="3" ry="3" width="220" height="10" />
-  <svg:rect x="20" y="40" rx="3" ry="3" width="170" height="10" />
-
-  <svg:rect x="20" y="60" rx="3" ry="3" width="250" height="10" />
-  <svg:rect x="20" y="80" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="100" rx="3" ry="3" width="80" height="10" />
-
-  <svg:rect x="0" y="120" rx="3" ry="3" width="450" height="10" />
-  <svg:rect x="20" y="140" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="160" rx="3" ry="3" width="80" height="10" />
-
-  <svg:rect x="20" y="180" rx="3" ry="3" width="250" height="10" />
-  <svg:rect x="20" y="200" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="220" rx="3" ry="3" width="80" height="10" />
-
-  <svg:rect x="20" y="240" rx="3" ry="3" width="250" height="10" />
-  <svg:rect x="20" y="260" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="280" rx="3" ry="3" width="80" height="10" />
-
-  <svg:rect x="0"  y="300" rx="3" ry="3" width="450" height="10" />
-  <svg:rect x="20" y="320" rx="3" ry="3" width="200" height="10" />
-  <svg:rect x="20" y="340" rx="3" ry="3" width="80" height="10" />
-</content-loader>
-
-<div *ngIf="!error">
-
-  <div class="container" *ngIf="!loading">
-
-    <mat-paginator [length]="total"
-                   [pageSize]="limit"
-                   [pageSizeOptions]="[5, 10, 25, 100]"
-                   [pageIndex]="n"
-                   (page)="setCurrentPage($event)"
-                   [showFirstLastButtons]="true"
-                   aria-label="Select page">
-    </mat-paginator>
-
+<ng-template #lastExpensesTable let-entities="entities">
     <table mat-table [dataSource]="entities">
-
 
       <ng-container matColumnDef="daysAgo">
         <th mat-header-cell *matHeaderCellDef> Days </th>
@@ -94,16 +49,6 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </table>
+</ng-template>
 
-    <mat-paginator [length]="total"
-                   [pageSize]="limit"
-                   [pageSizeOptions]="[5, 10, 25, 100]"
-                   [pageIndex]="n"
-                   (page)="setCurrentPage($event)"
-                   [showFirstLastButtons]="true"
-                   aria-label="Select page">
-    </mat-paginator>
-
-  </div>
-
-</div>
+<app-entity-list [resultItemTemplate]="lastExpensesTable"></app-entity-list>
