--- a/libs/shared-components/src/lib/components/entity-list/entity-list.component.html
+++ b/libs/shared-components/src/lib/components/entity-list/entity-list.component.html
@@ -6,7 +6,7 @@
 
 <div *ngIf="!error">
 
-  <div *ngIf="!loading">
+  <div *ngIf="!loading$">
     <div class="container">
 
       <mat-paginator [length]="total"
