--- a/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
@@ -3,7 +3,7 @@
 
     <ng-container matColumnDef="transferdate">
       <th mat-header-cell *matHeaderCellDef> Transfer Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.transferDate | date:'shortDate'}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.transferDate | date:'fullDate'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="name">
@@ -20,12 +20,13 @@
 
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef> Price </th>
-      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.price | currency: element.expense.moneyType?.code}} </td>
     </ng-container>
 
     <ng-container matColumnDef="qty">
       <th mat-header-cell *matHeaderCellDef> Qty </th>
-      <td mat-cell *matCellDef="let element"> {{element.qty}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.qty | number:'1.0-2'}}
+        {{ element.commodity?.unittype?.shortName }} </td>
     </ng-container>
 
     <ng-container matColumnDef="organizationname">
@@ -46,4 +47,4 @@
   </table>
 </ng-template>
 
-<app-entity-list [resultItemTemplate]="expensesTable"></app-entity-list>
+<app-entity-list [resultItemTemplate]="expensesTable" [table]="true"></app-entity-list>
