--- a/libs/shared-components/src/lib/components/entity-list/entity-list.component.html
+++ b/libs/shared-components/src/lib/components/entity-list/entity-list.component.html
@@ -6,7 +6,33 @@
 
 <div *ngIf="!error">
 
-  <div *ngIf="!loading$">
+  <content-loader class="ph-item" *ngIf="loading">
+    <svg:rect x="0" y="0" rx="3" ry="3" width="450" height="10" />
+    <svg:rect x="20" y="20" rx="3" ry="3" width="220" height="10" />
+    <svg:rect x="20" y="40" rx="3" ry="3" width="170" height="10" />
+
+    <svg:rect x="20" y="60" rx="3" ry="3" width="250" height="10" />
+    <svg:rect x="20" y="80" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="100" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="0" y="120" rx="3" ry="3" width="450" height="10" />
+    <svg:rect x="20" y="140" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="160" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="20" y="180" rx="3" ry="3" width="250" height="10" />
+    <svg:rect x="20" y="200" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="220" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="20" y="240" rx="3" ry="3" width="250" height="10" />
+    <svg:rect x="20" y="260" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="280" rx="3" ry="3" width="80" height="10" />
+
+    <svg:rect x="0"  y="300" rx="3" ry="3" width="450" height="10" />
+    <svg:rect x="20" y="320" rx="3" ry="3" width="200" height="10" />
+    <svg:rect x="20" y="340" rx="3" ry="3" width="80" height="10" />
+  </content-loader>
+
+  <div *ngIf="!loading">
     <div class="container">
 
       <mat-paginator [length]="total"
