[+] Parent/child components communication

--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
@@ -94,6 +94,9 @@
 
   <app-entity-list [resultItemTemplate]="exchangeTable"
                    [table]="true"
+                   [queryArguments]="getQueryArguments()"
+                   [queryName]="getQueryName()"
+                   [sort]="getSort()"
                    (loading$)="setLoading($event)"
                    (pageLoading$)="setPageLoading($event)"
   ></app-entity-list>
