--- a/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
@@ -15,5 +15,62 @@
       <ya-placemark [geometry]="[55.751952, 37.600739]"></ya-placemark>
     </ya-map>
   </div>
-
 </div>
+
+<div class='row' *ngIf="graph.data[0].x.length > 1">
+  <div class='col-12'>
+    <plotly-plot [data]="graph.data" [layout]="graph.layout"
+                 [style]="{minWidth: '800px', width: '100%', height: '500px'}">
+    </plotly-plot>
+  </div>
+</div>
+
+<ng-template #expensesTable let-entities="entities">
+  <table mat-table [dataSource]="entities">
+
+    <ng-container matColumnDef="transferdate">
+      <th mat-header-cell *matHeaderCellDef> Transfer Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.transferDate | date:'fullDate'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element">
+        <a *ngIf="element.commodity && element.commodityLink"
+           routerLink="{{element.commodityLink}}">
+          {{element.commodity.name}}</a>
+
+        <div *ngIf="element.commodity && !element.commodityLink">
+          {{element.commodity.name}}</div>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef> Price </th>
+      <td mat-cell *matCellDef="let element"> {{element.price | currency: element.expense.moneyType?.code}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="qty">
+      <th mat-header-cell *matHeaderCellDef> Qty </th>
+      <td mat-cell *matCellDef="let element"> {{element.qty | number:'1.0-2'}}
+        {{ element.commodity?.unittype?.shortName }} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+</ng-template>
+
+<app-entity-list
+  [resultItemTemplate]="expensesTable"
+  [table]="true"
+  [queryArguments]="getQueryArguments()"
+  [queryName]="'tradeplace'"
+  (loading$)="setLoading($event)"
+  (pageLoading$)="setPageLoading($event)"
+  (entities$)="setEntities($event)"
+></app-entity-list>
+
+
+
