--- a/apps/money-tracker-ui/src/app/main/main.component.html
+++ b/apps/money-tracker-ui/src/app/main/main.component.html
@@ -2,7 +2,7 @@
   <div>
     <mat-form-field appearance="fill">
       <mat-label>Available currencies</mat-label>
-      <mat-select [disabled]="this.loading" [value]="currency" (valueChange)="updateCurrency($event)">
+      <mat-select [disabled]="this.loading" [value]="currency" (valueChange)="updateCurrencyOrPage($event)">
         <mat-option *ngFor="let currency of currencies | keyvalue" [value]="currency.value">
           {{currency.value}}
         </mat-option>
