[+] Added reselling balance

--- a/apps/money-tracker-ui/src/app/expenses/in-out-list/in-out-list.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/in-out-list/in-out-list.component.html
@@ -20,7 +20,7 @@
   <div echarts
        [options]="options"
        (chartClick)="onChartEvent($event, 'chartClick')"
-       class="accounts-chart">
+       class="reselling-chart">
   </div>
 
 
