--- a/apps/money-tracker-ui/src/app/expenses/in-out-list/in-out-list.component.sass
+++ b/apps/money-tracker-ui/src/app/expenses/in-out-list/in-out-list.component.sass
@@ -2,8 +2,9 @@
   float: right
   padding-top: 20px
 
-.accounts-chart
+.reselling-chart
   position: relative
-  height: 80vh
+  height: 240vh
   overflow: hidden
+
 
