--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -13,16 +13,20 @@
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/accounts">
-          <mat-icon fontIcon="account_balance"></mat-icon> Accounts</a>
+          <mat-icon fontIcon="savings"></mat-icon> Accounts</a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/main">
-          <mat-icon fontIcon="timeline"></mat-icon> Currencies
+          <mat-icon fontIcon="timeline"></mat-icon> Balance History
         </a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/exchange">
           <mat-icon fontIcon="currency_exchange"></mat-icon> Currency Exchange</a>
+        <a mat-list-item
+           routerLinkActive="active-link"
+           routerLink="/inOut">
+          <mat-icon fontIcon="balance"></mat-icon> Reselling</a>
         <a mat-list-item
            routerLinkActive="active-link"
            routerLink="/expenses">
