[+] Added balance component instead of main

--- a/apps/money-tracker-ui/src/app/header/header.component.html
+++ b/apps/money-tracker-ui/src/app/header/header.component.html
@@ -16,8 +16,8 @@
           <mat-icon fontIcon="savings"></mat-icon> Accounts</a>
         <a mat-list-item
            routerLinkActive="active-link"
-           routerLink="/main">
-          <mat-icon fontIcon="timeline"></mat-icon> Balance History
+           routerLink="/balance">
+          <mat-icon fontIcon="timeline"></mat-icon> Balance Monthly
         </a>
         <a mat-list-item
            routerLinkActive="active-link"
