--- a/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
@@ -22,11 +22,9 @@
   </div>
 </div>
 
-<div class='row' *ngIf="graph.data[0].x.length > 1">
+<div class='row' *ngIf="option.xAxis?.data?.length > 1">
   <div class='col-12'>
-    <plotly-plot [data]="graph.data" [layout]="graph.layout"
-                 [style]="{minWidth: '800px', width: '100%', height: '500px'}">
-    </plotly-plot>
+    <div echarts [options]="option"></div>
   </div>
 </div>
 
